force-app/main/default/objects/Notice__c/Notice__c.object-meta.xml
<CustomObject>
    <label>Notice</label>
    <nameField>
        <displayFormat>N-{0}</displayFormat>
        <label>Notice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>