force-app/main/default/objects/Notice__c/fields/Next_Hearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Hearing_Date__c</fullName>
    <label>Next Hearing Date</label>
    <type>Date</type>
</CustomField>