force-app/main/default/objects/Notice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Notice</fullName>
                <default>true</default>
                <label>New Notice</label>
            </value>
            <value>
                <fullName>Informed Team</fullName>
            </value>
            <value>
                <fullName>Documentation Ready</fullName>
            </value>
            <value>
                <fullName>Responded to Dept.</fullName>
            </value>
            <value>
                <fullName>Notice Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>